Fix volume mount for portainer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     command: -H unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data/data
+      - portainer_data:/data
 
     deploy:
       placement:
@@ -114,7 +114,7 @@ services:
 
 volumes:
   portainer_data:
-  grafana_data: {}
+  grafana_data: 
 
 networks:
   back:
